# latentwt

./: .gitignore  LICENSE  README.md  index.html  manifest.webmanifest  model.py  package.json  pnpm-lock.yaml  pyproject.toml  sw.js  tsconfig.json  vite.config.ts  wavetables.json
.github/workflows/: deploy.yaml
assets/: index.45b5391d.js  index.753b1273.js  index.bfa976c8.css  index.cf529e05.js  latentwt.6d81f948.onnx  runtime.7b5c4d8b.js  runtime.e820aed0.js  ui.51da8d5a.js  ui.97daa107.js
public/v1/: wavetables.json
src/: App.vue  types.d.ts  utils.ts
src/components/: LatentSpace.vue  LineChart.vue  ModelInference.vue
src/compositions/: immer.ts  useMedia.ts  usePromise.ts
src/lib/: model.ts  wavetables.ts
src/old/: App.vue  Box.vue  Scatter.vue  Title.vue
v1/: latentwt.onnx
