[tool.poetry]
name = "latent-sample"
version = "0.1.0"
description = ""
authors = ["Nathan Graule <solarliner@gmail.com>"]
readme = "README.md"
packages = [{ include = "latent_sample" }]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.3"
scipy = "^1.9.1"
torch = { version = "=1.12.1+cu116", source = "pytorch" }
tqdm = "^4.64.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116/"
secondary = true
default = false

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.7"
matplotlib = "^3.5.3"
ipywidgets = "^8.0.2"
jupyter = "^1.0.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
